force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Advisory_Council__c.field-meta.xml
<CustomField>
    <fullName>ND_Advisory_Council__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Advisory Council that the nomination/renewal is for</description>
    <label>Advisory Council</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ucinn_ascendv2__Involvement_Value__c.ucinn_ascendv2__Type__c</field>
            <operation>equals</operation>
            <value>Advisory Council</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ucinn_ascendv2__Involvement_Value__c</referenceTo>
    <relationshipLabel>Advisory Council Recommendations</relationshipLabel>
    <relationshipName>Advisory_Council_Nominations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>