force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Decision_Summary__c.field-meta.xml
<CustomField>
    <fullName>ND_Decision_Summary__c</fullName>
    <description>Tracks the decision summary/notes for the nomination/renewal</description>
    <label>Decision Summary</label>
    <type>TextArea</type>
</CustomField>