force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Membership_Decision__c.field-meta.xml
<CustomField>
    <fullName>ND_Membership_Decision__c</fullName>
    <description>Tracks the decision for the nomination/renewal</description>
    <label>Membership Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approve</fullName>
            </value>
            <value>
                <fullName>Reject</fullName>
            </value>
            <value>
                <fullName>Gift Contingent</fullName>
            </value>
            <value>
                <fullName>Deferred to future FY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>