force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_Renewal_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>ND_Renewal_Recommendation__c</fullName>
    <description>Tracks renewal recommendation type</description>
    <label>Renewal Recommendation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Council 1 Year Renewal</fullName>
            </value>
            <value>
                <fullName>Council 3 Year Renewal</fullName>
            </value>
            <value>
                <fullName>Council Recommend Renewal</fullName>
            </value>
            <value>
                <fullName>Council Recommend Retire</fullName>
            </value>
            <value>
                <fullName>Council Transfer</fullName>
            </value>
            <value>
                <fullName>Defer to Council Leadership/Non Dev Interest</fullName>
            </value>
            <value>
                <fullName>Member Self Retire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>