force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/fields/ND_UR_Notes__c.field-meta.xml
<CustomField>
    <fullName>ND_UR_Notes__c</fullName>
    <description>University Relation Notes from meetings regarding the nomination/renewal</description>
    <label>UR Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>