force-app/main/default/objects/ND_Advisory_Council_Recommendation__c/recordTypes/Nomination.recordType-meta.xml
<RecordType>
    <fullName>Nomination</fullName>
    <active>true</active>
    <description>Nomination for Advisory Council</description>
    <label>Nomination</label>
</RecordType>